

[package]
name = "escrow-native"
version = "0.1.0"
description = "Multi-signature escrow program with milestone-based releases for Grid P2P Marketplace"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/grid-escrow"
license = "MIT"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "grid_escrow_program"

[features]
default = []
no-entrypoint = []
test-sbf = []
# Enable this for local development with more detailed errors
dev = ["solana-program/dev"]

[dependencies]
# Solana deps 
solana-program = "~1.18.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
borsh = "1.3.0"
borsh-derive = "1.3.0"
thiserror = "1.0"
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"], optional = true }
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.36", features = ["full"] }
assert_matches = "1.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z" 

strip = true   


[profile.release.build-override]
opt-level = 3

# debugging
[profile.dev]
opt-level = 0
debug = true

# optimizations
[profile.test]
opt-level = 2

[[example]]
name = "initialize_escrow"
path = "examples/initialize_escrow.rs"

[[example]]
name = "release_funds"
path = "examples/release_funds.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
